--- a/index.html
+++ b/index.html
@@ -260,6 +260,41 @@
                                     <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                                 </div>
                             </div>
+                            <div class="col-12" id="chatter">
+                                <div class="row py-5 px-4">
+                                    <div class="col-12  g-3  px-5 d-flex justify-content-end ">
+                                        <div class=" my-message message-sent">
+                                            <span class="text-start">hai portato a spasso il cane?</span>
+                                            <span class="d-block text-end">15.30</span>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-12  g-3  px-5 d-flex justify-content-end ">
+                                        <div class=" my-message message-sent">
+                                            <span class="text-start">Ricordati di standere i panni</span>
+                                            <span class="d-block text-end">15.30</span>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-12  g-3  px-5 d-flex justify-content-start ">
+                                        <div class=" my-message message-received">
+                                            <span class="text-start">Tutto fatto</span>
+                                            <span class="d-block text-end">15.30</span>
+
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+                            <!-- footer-message -->
+                            <div class="col-12 d-flex justify-content-between align-items-center" id="footer-message">
+                                <a class="px-3" href="#"><i class="fa-solid fa-face-smile"></i></a>
+                                <input class="flex-grow-1 px-3 py-1 border-0 rounded" type="text"
+                                    placeholder="Scrivi un messaggio">
+                                <a class="px-3" href="#"><i class="fa-solid fa-microphone"></i></a>
+                            </div>
+
 
                         </div>
                     </div>
@@ -267,17 +302,6 @@
 
 
 
-                <!-- footer-message -->
-                <!--          <div class="col-8 d-flex justify-content-between align-items-center" id="footer-message">
-                        <a class="px-3" href="#"><i class="fa-solid fa-face-smile"></i></a>
-                        <input class="flex-grow-1 px-3 py-1 border-0 rounded" type="text"
-                            placeholder="Scrivi un messaggio">
-                        <a class="px-3" href="#"><i class="fa-solid fa-microphone"></i></a>
-                    </div> -->
-                <!--    <div class="icnos-profile d-flex align-items-center justify-content-end "
-                                    id="last-hour-message">
-                                    <span class="last-access">12:00</span>
-                                </div> -->
 
         </main>
 
