sistemato list friend

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                                             <span class="last-access">12:00</span>
                                         </div>
                                     </div>
-                                    <div class="col-12 d-flex justify-content-between  user-friend">
+                                    <!-- da commentare -->
+                                    <!--   <div class="col-12 d-flex justify-content-between  user-friend">
                                         <div class="icnos-profile d-flex align-items-center">
                                             <img class=" rounded-circle profile-pic" src="img/avatar_2.jpg"
                                                 alt="Michele">
@@ -117,8 +118,8 @@
                                             <span class="last-access">12:00</span>
                                         </div>
                                     </div>
-
-                                    <div class="col-12 d-flex justify-content-between ">
+                                 
+                                              <div class="col-12 d-flex justify-content-between ">
                                         <div class="icnos-profile d-flex align-items-center">
                                             <img class=" rounded-circle profile-pic" src="img/avatar_4.jpg"
                                                 alt="Michele">
@@ -234,7 +235,7 @@
                                         <div>
                                             <span class="last-access">12:00</span>
                                         </div>
-                                    </div>
+                                    </div> -->
 
                                 </div>
                             </div>
