--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                             <!-- friend -->
                             <div class="col-12 d-flex justify-content-between  px-3 py-1" id="menu-friend">
                                 <div class="row" id="list-friend">
-                                    <div class="col-12 d-flex justify-content-between  px-3 py-1 user-friend"
+                                    <div @click="setCurrentContent(index)"
+                                        class="col-12 d-flex justify-content-between  px-3 py-1 user-friend"
                                         v-for="(element,index) in  contacts">
                                         <div class="icnos-profile d-flex align-items-center">
                                             <img class=" rounded-circle profile-pic"
@@ -251,9 +252,10 @@
                             <div class="col-12 d-flex justify-content-between align-items-center">
                                 <div class="icnos-profile d-flex align-items-center">
                                     <img class=" rounded-circle profile-pic"
-                                        :src="`img/avatar${contacts[0].avatar}.jpg`" :alt='contacts[0].name'>
+                                        :src="`img/avatar${contacts[selectedUser].avatar}.jpg`"
+                                        :alt='contacts[selectedUser].name'>
                                     <div class="d-flex align-items-start flex-column">
-                                        <span id="user-name">{{contacts[0].name}}</span>
+                                        <span id="user-name">{{contacts[selectedUser].name}}</span>
                                         <span class="last-access">Ultimo accesso oggi alle 12:00</span>
                                     </div>
                                 </div>
@@ -268,7 +270,7 @@
                                 <div class="row py-5 px-4">
                                     <div class="col-12  g-3  px-5 d-flex "
                                         :class="(textMessage.status==='sent')?'justify-content-end ':''"
-                                        v-for="textMessage in contacts[0].messages">
+                                        v-for="textMessage in contacts[selectedUser].messages">
                                         <div class="my-message"
                                             :class="(textMessage.status==='sent')?'message-sent':'message-received'">
                                             <span class="text-start">{{textMessage.message}}</span>
