--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                             <span class="last-access">Ultimo messaggio inviato</span>
                                         </div>
                                         <div>
-                                            <span class="last-access">12:00</span>
+                                            <span class="last-access">{{getLastMessageUser()}}</span>
                                         </div>
                                     </div>
                                     <!-- da commentare -->
@@ -256,7 +256,8 @@
                                         :alt='contacts[selectedUser].name'>
                                     <div class="d-flex align-items-start flex-column">
                                         <span id="user-name">{{contacts[selectedUser].name}}</span>
-                                        <span class="last-access">Ultimo accesso oggi alle 12:00</span>
+                                        <span class="last-access">Ultimo accesso oggi alle
+                                            {{getLastMessageUser()}}</span>
                                     </div>
                                 </div>
                                 <div class="icnos-profile d-flex align-items-center justify-content-end "
