funzione dell'ultimo accesso degli utenti

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                             <span class="last-access">Ultimo messaggio inviato</span>
                                         </div>
                                         <div>
-                                            <span class="last-access">{{getLastMessageUser()}}</span>
+                                            <span class="last-access">{{getLastMessageUsers(index)}}</span>
                                         </div>
                                     </div>
                                     <!-- da commentare -->
