funzione che aggiunge un nuovo aggetto per il messaggio inviato

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- file css -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- dayjs. -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/dayjs.min.js"></script>
     <title>Boolzapp</title>
 </head>
 
@@ -301,7 +303,8 @@
                         <div class="col-12 d-flex justify-content-between align-items-center" id="footer-message">
                             <a class="px-3" href="#"><i class="fa-solid fa-face-smile"></i></a>
                             <input class="flex-grow-1 px-3 py-1 border-0 rounded" type="text"
-                                placeholder="Scrivi un messaggio">
+                                placeholder="Scrivi un messaggio" v-model.trim="newMessage"
+                                @keyup.enter="sendMessage()">
                             <a class="px-3" href="#"><i class="fa-solid fa-microphone"></i></a>
                         </div>
 
