--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
                                             <span class="last-access">Ultimo messaggio inviato</span>
                                         </div>
                                         <div>
-                                            <span class="last-access">{{getLastMessageUsers(index)}}</span>
+                                            <span class="last-access">{{formatDate(getLastMessageUsers(index))}}</span>
                                         </div>
                                     </div>
+
                                     <!-- da commentare -->
                                     <!--   <div class="col-12 d-flex justify-content-between  user-friend">
                                         <div class="icnos-profile d-flex align-items-center">
@@ -261,7 +262,7 @@
                                     <div class="d-flex align-items-start flex-column">
                                         <span id="user-name">{{contacts[selectedUser].name}}</span>
                                         <span class="last-access">Ultimo accesso oggi alle
-                                            {{getLastMessageUser()}}</span>
+                                            {{formatDate(getLastMessageUser)}}</span>
                                     </div>
                                 </div>
                                 <div class="icnos-profile d-flex align-items-center justify-content-end "
@@ -274,12 +275,25 @@
                             <div class="col-12" id="chatter">
                                 <div class="row py-5 px-4">
                                     <div class="col-12  g-3  px-5 d-flex "
-                                        :class="(textMessage.status ==='sent')?'justify-content-end ':''"
+                                        :class="(textMessage.status ==='sent') ?'justify-content-end ':''"
                                         v-for="textMessage in contacts[selectedUser].messages">
                                         <div class="my-message"
-                                            :class="(textMessage.status==='sent')?'message-sent':'message-received'">
+                                            :class="(textMessage.status==='sent') ?'message-sent':'message-received'"
+                                            id="prova">
                                             <span class="text-start">{{textMessage.message}}</span>
-                                            <span class="d-block text-end">{{textMessage.date}}</span>
+                                            <span class="d-block text-end">{{formatDate(textMessage.date)}}</span>
+
+                                            <!-- option-message-->
+                                            <div class="">
+                                                <span class="icons-option" @click="isActiveOption()">
+                                                    <i class="fa-solid fa-angle-down"></i>
+                                                </span>
+                                                <ul class="p-2 option-message"
+                                                    :class=" (optionActive == true ) ? 'active' :'' ">
+                                                    <li class="p-1">{{optionMessage.info}}</li>
+                                                    <li class="p-1">{{optionMessage.delete}}</li>
+                                                </ul>
+                                            </div>
                                         </div>
                                     </div>
                                     <!-- da commentare  -->
