--- a/index.html
+++ b/index.html
@@ -93,160 +93,13 @@
                                                 :src="`img/avatar${element.avatar}.jpg`" :alt='element.name'>
                                         </div>
                                         <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">{{element.name}}</span>
+                                            <span>{{element.name}}</span>
                                             <span class="last-access">Ultimo messaggio inviato</span>
                                         </div>
                                         <div>
                                             <span class="last-access">{{formatDate(getLastMessageUsers(index))}}</span>
                                         </div>
                                     </div>
-
-                                    <!-- da commentare -->
-                                    <!--   <div class="col-12 d-flex justify-content-between  user-friend">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_2.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Fabio</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between  user-friend ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_3.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Samuele</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                 
-                                              <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_4.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Alessandro B.</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_5.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Alessandro L.</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_6.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Claudia</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_7.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Federico</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_8.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Davide</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_8.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Davide</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_8.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Davide</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_8.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Davide</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 d-flex justify-content-between ">
-                                        <div class="icnos-profile d-flex align-items-center">
-                                            <img class=" rounded-circle profile-pic" src="img/avatar_8.jpg"
-                                                alt="Michele">
-                                        </div>
-                                        <div class="d-flex  flex-column flex-grow-1">
-                                            <span id="">Davide</span>
-                                            <span class="last-access">Ultimo messaggio inviato</span>
-                                        </div>
-                                        <div>
-                                            <span class="last-access">12:00</span>
-                                        </div>
-                                    </div> -->
-
                                 </div>
                             </div>
 
@@ -286,8 +139,8 @@
                                             <span class="d-block text-end">{{formatDate(textMessage.date)}}</span>
 
                                             <!-- option-message-->
-                                            <div :class="(selectedIndexMessage === messageIndex) ?'active' : '' "
-                                                @click="getIndexMessage(messageIndex)">
+                                            <div :class="(selectedIndexMessage === messageIndex && isActive) ? 'active' : '' "
+                                                @click="isActiveOption(getIndexMessage(messageIndex))">
                                                 <span class="icons-option">
                                                     <i class="fa-solid fa-angle-down"></i>
                                                 </span>
@@ -299,23 +152,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- da commentare  -->
-                                    <!--  <div class="col-12  g-3  px-5 d-flex justify-content-end ">
-                                        <div class=" my-message message-sent">
-                                            <span class="text-start">Ricordati di standere i panni</span>
-                                            <span class="d-block text-end">15.30</span>
-
-                                        </div>
-                                    </div>
-                                    <div class="col-12  g-3  px-5 d-flex justify-content-start ">
-                                        <div class=" my-message message-received">
-                                            <span class="text-start">Tutto fatto</span>
-                                            <span class="d-block text-end">15.30</span>
-
-                                        </div> -->
                                 </div>
-
-
                             </div>
                         </div>
                         <!-- footer-message -->
@@ -326,8 +163,6 @@
                                 @keyup.enter="sendMessage(newMessage)">
                             <a class="px-3" href="#"><i class="fa-solid fa-microphone"></i></a>
                         </div>
-
-
                     </div>
                 </div>
             </div>
